--- a/css/style.css
+++ b/css/style.css
@@ -1119,3 +1119,4 @@ footer .socail ul li a.linkdin:hover {
 
 
 /*Gravity Forms*/
+body #gform_wrapper_1 .gform_body .gform_fields .gfield input[type=text] {border: 1px solid red;}
