--- a/css/color-mustard.css
+++ b/css/color-mustard.css
@@ -17,7 +17,7 @@ textarea:focus {
     background-position: left center;
     background-repeat:no-repeat;
     background-size:cover;
-    background-attachmentfixed:
+    background-attachment:fixed:
 }
 
 #color-mustard .banner.benefits-bg {
