--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     font-weight: 300;
     font-size: 16px;
     background-color: #fff;
-    color: #fff;
+    color: #222;
     overflow-x: hidden;
     overflow: hidden
 }
@@ -1119,7 +1119,7 @@ footer .socail ul li a.linkdin:hover {
 
 
 /*Gravity Forms*/
-body #gform_wrapper_1 .gform_body .gform_fields .gfield input[type=text] {
+body #gform_wrapper_1 .gform_body .gform_fields .gfield input[type=text],body #gform_wrapper_1 .gform_body .gform_fields .gfield textarea {
 	background-color: #fff;
 	width: 100%;
 	height: 48px;
