--- a/css/style.css
+++ b/css/style.css
@@ -1129,3 +1129,16 @@ body #gform_wrapper_1 .gform_body .gform_fields .gfield input[type=text],body #g
 	font-size: 14px;
 	border: 1px solid #cecece
 }
+
+body #gform_wrapper_1 .gform_footer {text-align:center;}
+
+body #gform_wrapper_1 .gform_footer input[type=submit] {
+color: black;
+    background: #e9a63e;
+    padding: 16px;
+    font-family: Roboto;
+    border-radius: 4px;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 100%;
+}
